--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4208,6 +4208,11 @@ section.post {
     border-top: none;
 }
 
+section.livestream {
+    padding: 0 0 1rem 0; /* No top padding, keep bottom and sides */
+    overflow: auto;
+}
+
 #main > *:first-child {
     border-top: 0;
 }
@@ -4438,7 +4443,7 @@ article.community.featured {
 
 @media screen and (max-width: 736px) {
     #main > * {
-        padding: 0.2rem 2rem 0.1rem 2rem;
+        padding: 2rem 2rem 0.1rem 2rem;
     }
 }
 
@@ -5301,6 +5306,47 @@ body.dark-mode #darkModeToggle.dark i::before {
     }
 }
 
+/* Video Main General styling (for all videos in .main) */
+.video.main {
+    position: relative;
+    width: 100%;
+    height: 0;
+    padding-bottom: 56.25%; /* 16:9 aspect ratio */
+    overflow: hidden;
+	margin-bottom: 1.5rem;
+}
+
+/* Mobile-specific styles */
+@media screen and (max-width: 980px) {
+	.video.main {
+		margin-bottom: 1rem;
+		/* Different margin for mobile */
+	}
+}
+
+.video.main iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+}
+
+.video.main .placeholder {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+}
+
+/* Unique styling for specific video(s) */
+#xstream {
+    /* Add any unique styles here for the first video */
+    border: 2px solid #a200ff; /* Example: red border */
+}
 /* Footer */
 footer {
 	position: relative;
