--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4644,6 +4644,30 @@ article.community.featured {
     }
 }
 
+/* Custom styling for the event post article */
+.event-post {
+    flex: 0 0 calc(50% - 2rem);
+    margin: 1rem;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+    padding: 2rem;
+    border: 1px solid var(--posts-border-color);
+    border-radius: 5px;
+    box-sizing: border-box;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+}
+
+/* Mobile-specific styling for the event post article */
+@media screen and (max-width: 767px) {
+    .event-post {
+        flex: 0 0 calc(100% - 2rem);
+        margin: 1rem 0;
+        padding: 2rem;
+    }
+}
+
 /* Footer */
 
 	#footer {
@@ -5423,6 +5447,8 @@ body.dark-mode #darkModeToggle.dark i::before {
     }
 }
 
+
+
 /* Video Main General styling (for all videos in .main) */
 .video.main {
     position: relative;
@@ -5431,7 +5457,17 @@ body.dark-mode #darkModeToggle.dark i::before {
     padding-bottom: 54.6%; /* 16:9 aspect ratio */
     overflow: hidden;
     margin: 1rem auto 2rem auto; /* Center horizontally and adjust margin */
-    border: 2px solid #a200ff; /* Example: red border */
+}
+
+/* Video Stream styling (for all videos in .stream.main) */
+.stream.video.main {
+    position: relative;
+    width: calc(100% - 2rem); /* Adjust width to account for padding */
+    height: 0;
+    padding-bottom: 54.6%; /* 16:9 aspect ratio */
+    overflow: hidden;
+    margin: 1rem auto 2rem auto; /* Center horizontally and adjust margin */
+	border: 2px solid #a200ff; /* Example: red border */
 }
 
 /* Prevent children from inheriting or being affected by the border */
@@ -5441,7 +5477,7 @@ body.dark-mode #darkModeToggle.dark i::before {
 }
 
 /* Ensure X embed is centered and fits within the container */
-.video.main .twitter-tweet {
+.stream.video.main .twitter-tweet {
     position: absolute;
     z-index: 10;
     display: flex;
@@ -5463,8 +5499,19 @@ body.dark-mode #darkModeToggle.dark i::before {
         position: relative;
         overflow: hidden; /* Ensure content doesn't spill outside */
     }
+}
 
-    .video.main .twitter-tweet {
+@media screen and (max-width: 980px) {
+	.stream.video.main {
+        width: 100%;
+        height: 0; /* Reset height to allow padding to define the aspect ratio */
+        padding-bottom: 56%; /* Your specific aspect ratio */
+        margin: 0rem auto 2rem auto;
+        position: relative;
+        overflow: hidden; /* Ensure content doesn't spill outside */
+    }
+
+    .stream.video.main .twitter-tweet {
         position: absolute;
         top: 0;
         left: 0;
@@ -5475,7 +5522,7 @@ body.dark-mode #darkModeToggle.dark i::before {
         z-index: 10;
     }
     
-    .video.main .twitter-tweet iframe {
+    .stream.video.main .twitter-tweet iframe {
         width: 100%;
         height: 100%;
         max-width: 100%;
@@ -5522,7 +5569,7 @@ body.dark-mode #darkModeToggle.dark i::before {
 /* Unique styling for specific video(s) */
 #xstream {
     /* Add any unique styles here for the first video */
-    border: 2px solid #a200ff; /* Example: red border */
+    border: 2px solid #a200ff !important /* Example: red border */
 }
 
 /* Footer */
