--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5602,10 +5602,13 @@ body.dark-mode #darkModeToggle.dark i::before {
 			width: 100%;
 			height: 100%;
 			max-width: 100vw; /* Full viewport width on mobile */
-			max-height: 100vh; /* Ensure it doesn't exceed viewport height */
-			z-index: 20;
-			transform: translate(-50%, -50%); /* Scale down if necessary for fit */
+			max-height: none; /* Allow content to define height */
+			z-index: 10;
+			top: 50%;
+			left: 50%;
+			transform: translate(-50%, -50%) scale(1); /* Scale down if necessary for fit */
 			/* Add this to center text or other content inside the tweet */
+			display: flex;
 			justify-content: center;
 			align-items: center;
 		}
